--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -40,7 +40,10 @@ html
             $('form').submit(function() {
                 const name = $('#name').val();
                 const message = $('#message').val();
-                socket.emit('chatter', `${name} : ${message}`);
+                socket.emit('chatter', message);
                 $('#message').val('');
                 return false;
             });
+            socket.on('chatter', function(message) {
+                $('#chat-messages').append($('<li>').text(message));
+             });
