--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -7,6 +7,8 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
   body
+   .upload-area#uploadArea
+    script(src="/upload.js")
     #chat-app
       #chat.has-text-centered
         section.hero.is-success
