Feedback for upload

--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -49,3 +49,7 @@ html
             socket.on('chatter', function(message) {
                 $('#chat-messages').append($('<li>').text(message));
              });
+
+            socket.on('chitter', function(message) {
+                $('#chat-messages').append($('<li>').text(message));
+             });
